fixed wrapper covering whole page

--- a/style.css
+++ b/style.css
@@ -40,12 +40,11 @@ body {
 }
 
 .wrapper {
-  /* position: absolute;
+  position: absolute;
   top: 0;
   right: 0;
-  left: 0; */
-  height: 100%;
-  width: 100%;
+  left: 0;
+  bottom: 0;
   background-color: var(--light-black);
   color: var(--off-white);
 }
